# tablet-tools

./: .gdbinit  .gitignore  CMakeLists.txt  calculate-gdb-file-load.sh  copy-uefi-boot-to-usb.sh  gdb-rewrap.sh  gdb-wrap.sh  how-to-debug.txt  uefi_debug.py
cmake/: FindEfi.cmake
uefi-bootengine/: CMakeLists.txt
uefi-bootengine/include/tablet-tools/uefi-bootengine/: bitmask.hpp  environment.hpp  extra_type_traits.hpp  result.hpp  stddefs.hpp  stdlib.hpp
uefi-bootengine/include/tablet-tools/uefi-bootengine/application/: application.hpp  global_key_input.hpp
uefi-bootengine/include/tablet-tools/uefi-bootengine/efi/: efi_type_traits.hpp  event_manager.hpp  protocol_handle.hpp  protocol_manager.hpp  simple_text_input_protocol.hpp  usb_hc2_protocol.hpp  usb_io_protocol.hpp
uefi-bootengine/include/tablet-tools/uefi-bootengine/efi/protocol/: efi_usb.hpp  efi_usb2_hc.hpp
uefi-bootengine/include/tablet-tools/uefi-bootengine/std/: forward.hpp  function.hpp  hash_map.hpp  linked_list.hpp  move.hpp  shared_ptr.hpp  std_stream.hpp  string.hpp  type_traits.hpp  vector.hpp
uefi-bootengine/src/: environment.cpp  main.cpp  stdlib.cpp
uefi-bootengine/src/application/: application.cpp  global_key_input.cpp
uefi-bootengine/src/efi/: event_manager.cpp  protocol_manager.cpp  simple_text_input_protocol.cpp  usb_hc2_protocol.cpp  usb_io_protocol.cpp
uefi-bootengine/src/efi/protocol/: efi_usb.cpp  efi_usb2_hc.cpp
uefi-bootengine/src/std/: std_stream.cpp  string.cpp
usb-control/: CMakeLists.txt
usb-control/include/tablet-tools/usb-control/: libusb_plus_plus.hpp
usb-control/src/: libusb_plus_plus.cpp  main.cpp
